--- a/config-1.12.json
+++ b/config-1.12.json
@@ -10,7 +10,7 @@
         "type": "udp",
         "server": "8.8.8.8",
         "domain_resolver": {
-          "server": "local",
+          "server": "dns_system",
           "strategy": "prefer_ipv4"
         },
         "detour": "🚀 Proxy"
@@ -20,12 +20,12 @@
         "type": "udp",
         "server": "223.5.5.5",
         "domain_resolver": {
-          "server": "local",
+          "server": "dns_system",
           "strategy": "prefer_ipv4"
         }
       },
       {
-        "tag": "local",
+        "tag": "dns_system",
         "type": "local"
       }
     ],
@@ -83,7 +83,7 @@
   },
   "route": {
     "default_domain_resolver": {
-      "server": "local",
+      "server": "dns_system",
       "rewrite_ttl": 60,
       "client_subnet": "1.1.1.1"
     },
@@ -130,6 +130,7 @@
           "mixed-in",
           "tun-in"
         ],
+        "ip_version": 4,
         "action": "resolve",
         "strategy": "prefer_ipv4"
       },
