--- a/config-1.11.json
+++ b/config-1.11.json
@@ -153,7 +153,7 @@
         ],
         "ip_version": 4,
         "action": "resolve",
-        "strategy": "ipv4_only"
+        "strategy": "ipv4_only",
         "server": "dns_ipv4_only"
       },
       {
