--- a/config-1.11.json
+++ b/config-1.11.json
@@ -99,7 +99,7 @@
           "A"
         ],
         "action": "route-options",
-        "server": "dns_remote",
+        "server": "dns_ipv4_only",
         "disable_cache": true,
         "rewrite_ttl": 0
       }
@@ -273,6 +273,7 @@
       "server": "time.cloudflare.com",
       "server_port": 8880,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -289,6 +290,7 @@
       "server": "cdn-all.xn--b6gac.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -305,6 +307,7 @@
       "server": "edgetunnel.anycast.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -321,6 +324,7 @@
       "server": "edtunnel-dgp.pages.dev",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -337,6 +341,7 @@
       "server": "www.baipiao.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -353,6 +358,7 @@
       "server": "cdn-b100.xn--b6gac.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -369,6 +375,7 @@
       "server": "xn--b6gac.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -385,6 +392,7 @@
       "server": "cdn.anycast.eu.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -401,6 +409,7 @@
       "server": "www.visa.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -417,6 +426,7 @@
       "server": "www.visa.com.sg",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -433,6 +443,7 @@
       "server": "www.udacity.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -449,6 +460,7 @@
       "server": "www.zsu.gov.ua",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -465,6 +477,7 @@
       "server": "shopify.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -481,6 +494,7 @@
       "server": "www.visa.com.hk",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -497,6 +511,7 @@
       "server": "www.glassdoor.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -513,6 +528,7 @@
       "server": "www.visakorea.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -529,6 +545,7 @@
       "server": "www.okcupid.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -545,6 +562,7 @@
       "server": "www.digitalocean.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -561,6 +579,7 @@
       "server": "www.4chan.org",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -577,6 +596,7 @@
       "server": "www.visa.co.jp",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -593,6 +613,7 @@
       "server": "www.visa.com.tw",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -609,6 +630,7 @@
       "server": "www.udemy.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -625,6 +647,7 @@
       "server": "icook.hk",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -641,6 +664,7 @@
       "server": "www.csgo.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -657,6 +681,7 @@
       "server": "www.boba88slot.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -673,6 +698,7 @@
       "server": "www.gov.se",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -689,6 +715,7 @@
       "server": "www.shopify.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -705,6 +732,7 @@
       "server": "gur.gov.ua",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -721,6 +749,7 @@
       "server": "skk.moe",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -737,6 +766,7 @@
       "server": "www.whatismyip.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -753,6 +783,7 @@
       "server": "www.ipget.net",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -769,6 +800,7 @@
       "server": "log.bpminecraft.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -785,6 +817,7 @@
       "server": "www.iakeys.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -801,6 +834,7 @@
       "server": "alejandracaiccedo.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -817,6 +851,7 @@
       "server": "www.gov.ua",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -833,6 +868,7 @@
       "server": "cdn-all.xijingping.link",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -849,6 +885,7 @@
       "server": "malaysia.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -865,6 +902,7 @@
       "server": "icook.tw",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -881,6 +919,7 @@
       "server": "russia.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -897,6 +936,7 @@
       "server": "japan.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -913,6 +953,7 @@
       "server": "www.hugedomains.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -929,6 +970,7 @@
       "server": "ip.sb",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -945,6 +987,7 @@
       "server": "www.whoer.net",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -961,6 +1004,7 @@
       "server": "www.gco.gov.qa",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -977,6 +1021,7 @@
       "server": "singapore.com",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
@@ -993,6 +1038,7 @@
       "server": "time.is",
       "server_port": 80,
       "uuid": "7b0668fc-6e0c-4362-b2b0-64d5f7f4a1f8",
+      "flow": "xtls-rprx-vision",
       "domain_strategy": "ipv4_only",
       "transport": {
         "path": "/?ed=2048",
